# metal-cmake-example

./: CMakeLists.txt  README.md  renderer.cpp  test.cpp  test.h  view_delegate.cpp
